--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
 
     <EditText
         android:id="@+id/etTodo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="258dp"
+        android:layout_height="40dp"
         android:hint="New ToDo"
         android:paddingEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
